--- a/riscos-discovery/index.html
+++ b/riscos-discovery/index.html
@@ -202,9 +202,9 @@
         <div class="container">
             <div class="pm-role-content">
                 <h2>Papel do PM (Product Manager)</h2>
-                <p>Atua como advisor e facilitador do processo.</p>
-                <p>Garante que os riscos estão mapeados desde o início e revisita os pontos sempre que o escopo mudar.</p>
-                <p>É quem costura os envolvidos e assegura que ninguém está ignorando um risco porque "não é com ele".</p>
+                <p>Atua como advisor e facilitador do processo, garantindo uma visão ampla e integrada.</p>
+                <p>Mapeia os riscos desde o início e revisita constantemente esses pontos sempre que o escopo mudar, prevenindo surpresas.</p>
+                <p>Costura todos os envolvidos e assegura que nenhum risco seja ignorado com a desculpa de que “não é responsabilidade dele”.</p>
             </div>
         </div>
     </section>
