--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
             <h2 class="section-title">Rituais Secundários</h2>
             <div class="secondary-meetings">
                 <h3>Outras Agendas Possíveis</h3>
-                <p><strong>Refinamentos de cartão:</strong> Responsabilidade da Buildbox. Deve ser no máximo +2h por semana. Se parar todo mundo seriam 28 horas totais na sprint no máximo. Estamos liberando 8h de sprint (segunda de tarde e sexta de manhã), eles podem colocar essas horas sem impacto no desenvolvimento e sobram 4h.</p>
-                <p><strong>Dúvidas sobre demandas:</strong> Primeiramente tiradas com o PM, se não sanar, escalamos para o BO por e-mail e/ou reunião, de acordo com a urgência. Deve ser no máximo mais 2h por sprint. Se envolver todos possíveis nessa fase, são 10h.</p>
+                <p><strong>Refinamentos de cartão:</strong> Responsabilidade da Buildbox. Sugestão de 2h por semana. Estamos liberando 8h de sprint (segunda de tarde e sexta de manhã), colocar essas horas não impactam no desenvolvimento e sobram 4h.</p>
+                <p><strong>Dúvidas sobre demandas:</strong> Primeiramente tiradas com o PM, se não sanar, escalamos para o BO por e-mail e/ou reunião, de acordo com a urgência. Sugestão de máx. 2h por sprint.</p>
             </div>
         </div>
     </section>
@@ -261,7 +261,7 @@
                         <h3>Viabilização Técnica</h3>
                         <p><strong>Responsável:</strong> Tech Lead (BuildBox)</p>
                         <p><strong>Tarefa:</strong> Analisar viabilidade técnica, conferir endpoints e áreas envolvidas.</p>
-                        <p><strong>Foco:</strong> Mitigar riscos técnicos e garantir caminho de desenvolvimento viável.</p>
+                        <p><strong>Foco:</strong> Mitigar riscos técnicos e de seguranã. Garantir caminho de desenvolvimento viável.</p>
                         <p><strong>Observações:</strong> Pode consultar outras áreas e sugerir ajustes técnicos se necessário.</p>
                         <div class="sla-table">
                             <table>
