--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h2 class="section-title">Rituais Principais</h2>
             <div class="grid">
                 <div class="card">
-                    <h3 class="card-title">Pre-Planning (Checkpoint de Negócios)</h3>
+                    <h3 class="card-title">Pre-Planning</h3>
                     <div class="card-content">
                         <p><strong>Objetivo:</strong> Definir o tema da sprint, épico prioritário e critério de sucesso.</p>
                         <p><strong>Participantes:</strong> PO, TL, PM, Business Owner</p>
@@ -152,7 +152,7 @@
                         </div>
                         <div class="meta-item">
                             <i class="fas fa-calendar"></i>
-                            <span>Semanal</span>
+                            <span>Semanal, uma por produto</span>
                         </div>
                     </div>
                 </div>
@@ -282,11 +282,11 @@
                 
                 <div class="timeline-item left">
                     <div class="timeline-content">
-                        <h3>Criação de Backlog</h3>
-                        <p><strong>Responsável:</strong> PO (BuildBox)</p>
-                        <p><strong>Tarefa:</strong> Fatiar demanda em épicos/histórias, vincular ao cartão, definir entregas.</p>
-                        <p><strong>Foco:</strong> Tornar a demanda executável com clareza e organização.</p>
-                        <p><strong>Observações:</strong> Pode consultar o PM sobre escopo/versionamento. Refinamento ainda a definir.</p>
+                        <h3>Checagem de negócios</h3>
+                        <p><strong>Responsável:</strong> BO (com apoio do PM)</p>
+                        <p><strong>Tarefa:</strong> Analisar se a entrega atende o que foi combinado</p>
+                        <p><strong>Foco:</strong> Checar se a entrega atende os requisitos colocado no inicio da demanda</p>
+                        <p><strong>Observações:</strong> Pode consultar o PM sobre dúvidas ou ajustes</p>
                         <div class="sla-table">
                             <table>
                                 <tr>
@@ -297,7 +297,7 @@
                                 <tr>
                                     <td>1 dia</td>
                                     <td>2 dias</td>
-                                    <td>3 dias</td>
+                                    <td>2 dias</td>
                                 </tr>
                             </table>
                         </div>
@@ -317,7 +317,7 @@
                         <tr>
                             <td>4 dias úteis</td>
                             <td>10 dias úteis</td>
-                            <td>16 dias úteis</td>
+                            <td>15 dias úteis</td>
                         </tr>
                     </table>
                 </div>
